--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,11 +10,11 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.0'
-          - '1.6'
-          - 'nightly'
+          - '1.5'
+          - '1'
         os:
           - ubuntu-latest
+          - windows-latest
         arch:
           - x64
     steps:
@@ -34,8 +34,3 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v1
-        with:
-          file: lcov.info
