--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,18 @@ uuid = "66620973-d34b-445b-a614-4040704cad69"
 authors = ["David Muhr <muhrdavid@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
+OutlierDetection = "262411bb-c475-4342-ba9e-03b8c0183ca6"
+OutlierDetectionInterface = "1722ece6-f894-4ffc-b6be-6ca1174e2011"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
 [compat]
 julia = "1"
+OutlierDetection = "0.2"
+OutlierDetectionInterface = "0.1"
+MLJBase = "0.18"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
