--- a/Project.toml
+++ b/Project.toml
@@ -11,10 +11,10 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-julia = "1"
-OutlierDetection = "0.2"
-OutlierDetectionInterface = "0.1"
 MLJBase = "0.18"
+OutlierDetection = "0.2, 0.1"
+OutlierDetectionInterface = "0.1"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
