--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "OutlierDetectionTest"
 uuid = "66620973-d34b-445b-a614-4040704cad69"
 authors = ["David Muhr <muhrdavid@gmail.com> and contributors"]
-version = "0.1.3"
+version = "0.1.4"
 
 [deps]
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
@@ -14,7 +14,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 julia = "1"
 OutlierDetection = "0.2"
 OutlierDetectionInterface = "0.1"
-MLJBase = "0.18"
+MLJBase = "0.18 - 0.19"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
