--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "OutlierDetectionTest"
 uuid = "66620973-d34b-445b-a614-4040704cad69"
 authors = ["David Muhr <muhrdavid@gmail.com> and contributors"]
-version = "0.1.4"
+version = "0.2.0"
 
 [deps]
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
@@ -11,10 +11,10 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-julia = "1"
-OutlierDetection = "0.2"
+julia = "^1.6"
+MLJBase = "~0.19.6"
+OutlierDetection = "0.3"
 OutlierDetectionInterface = "0.1"
-MLJBase = "0.18 - 0.19"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
