--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "OutlierDetectionTest"
 uuid = "66620973-d34b-445b-a614-4040704cad69"
 authors = ["David Muhr <muhrdavid@gmail.com> and contributors"]
-version = "0.2.1"
+version = "0.3.0"
 
 [deps]
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
@@ -12,9 +12,9 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 julia = "^1.6"
-MLJBase = "~0.19.6"
-OutlierDetection = "0.3"
-OutlierDetectionInterface = "0.1"
+MLJBase = "1.0"
+OutlierDetection = "0.4"
+OutlierDetectionInterface = "0.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
